<resources>
    <string name="app_name">StockManager</string>

    <!-- Strings related to login -->
    <string name="prompt_account">账户</string>
    <string name="prompt_password">密码</string>
    <string name="login_sign_in">登录</string>
    <string name="error_invalid_email">账户格式错误</string>
    <string name="error_invalid_password">密码长度不够</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="login_register">注册</string>
    <string name="send_security_code">发送验证码</string>
    <string name="register_confirm">确定</string>


</resources>
